--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body, html {
     font-size: 250%;
 }
 
+.hero-text h6 {
+    font-size: 50%;
+}
+
 .hero-text h2 {
     /* This section adds the text stylings for your hero block */
     display: block;
@@ -60,7 +64,7 @@ body, html {
 
 .blockquote {
     font: 24pt;
-    background-color: #;
+    background-color: #000;
     border-top: 3px solid #000;
     border-bottom: 3px solid #000;
     padding-left: 20px;
@@ -74,7 +78,7 @@ body, html {
     justify-content: center;
     align-items: center;
     height: 200px;
-    border: 0px solid #;
+    border: 0px solid #000;
 }
 
 .button {
@@ -237,7 +241,7 @@ this CSS element centers text elements*/
         padding-left: 20px;
         padding-right: 20px;
         padding-top: 100px;
-        padding-bottom: : 1000px;
+        padding-bottom: 1000px;
     }
 }
 
