--- a/elevator-pitch-generator-master/style.css
+++ b/elevator-pitch-generator-master/style.css
@@ -254,3 +254,23 @@ this CSS element centers text elements*/
 #footer {
         text-align: center;
     }
+
+.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .navbar li {
+    float: left;
+  }
+  
+  .navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
